  - Fix parsing for color hexstrings with other format, than #FFFFFF (e.g. 1 or 4 hexdigits per channel)
  - tint2conf: Theme context menu did not follow right-clicked theme if it was not selected before
  - tint2conf: Delay opening theme context menu
  - tint2conf: Much faster editor start due to optimized themes loading (bug #792)
2021-12-04 17.0.2
- Fixes:
  - On dual monitor, when minimizing Chrome window it minimizes on the wrong monitor panel (issue #818)
2021-05-29 17.0.1
- Fixes:
  - Crash on panel cleanup in single-monitor execp (issue #801)
2021-04-18 17.0
- Fixes:
  - Crash when a window icon is large (issue #786) (santouits)
  - Minute clock doesn't update (issue #786)
  - Scrollbars in tint2conf (issue #796)
  - Preserve item order when skipping executors (issue #799)
  - Image memory leak (issues #704, #721) (Adam M. Trofa)
  - Incorrect timeout microsecond computation leading to high CPU usage (issue #800)
- Enhancements:
  - Port tint2conf to gtk3 (issue #380)
  - execp_monitor config (issue #799)
  - Improved executor examples (Nikita Zlobin)
2019-07-14 16.7
- Fixes:
  - Fix spacing around icons in executor without text in vertical panels (issue #716)
  - Fix Bug: Clock Only Updates Every Minute With Format %s (issue #724)
  - Fix markup drawing when font shadow enabled (issue #709)
  - Struts pivoting: workaround for panel positioning between monitors in mutter (Chris Billington)
- Enhancements:
  - Blink battery when discharging and low (issue #723)
  - Add support for battery percentage without % sign (issue #730)
  - Expand leading ~ in icon paths

2018-08-05 16.6.1
- Fix packaging regression for debian (issue #715)

2018-08-04 16.6
- Fix regression in task icon brightness (issue #714)

2018-08-04 16.5
- Add new build script
- Add option to sort taskbar by application name
- Fix regression in image loading

2018-05-03 16.4
- Update AUTHORS
- Fixes:
  - Fix leak in image loading (issue #704)